--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <title>Quiz de Recommandation de Majeur - SUPTECH SANTÉ</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="quiz-styles.css">
-    <link rel="icon" href="logo.png" type="image/x-icon">
+    <link rel="icon" href="logo1.png" type="image/x-icon">
 </head>
 <body>
     <div class="quiz-container">
